# TeraChat

./: .gitignore  AGENT_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  sbom.yml  security.yml  wasm-parity.yml
docs/: Directory-tree.md
docs/HTML/: Design.html  Executive_Summary.html  Function.html  Introduction.html  Pitch_Deck.html  Pricing_Packages.html  Spec-Client-IPC-And-UI-Bridge.html  Spec-Core-Cryptography-And-Mesh.html  Spec-Dual-Sync-And-Local-Storage.html  Spec-Ecosystem-And-Trust-Chain.html  Spec-Enterprise-Secure-Enclave.html  Spec-Identity-And-Governance.html  Spec-Wasm-Tapp-Runtime.html  TeraChat.html  Web_Marketplace.html
docs/MD/: Arrange.md  Function.md  Introduction.md  Spec-Client-IPC-And-UI-Bridge.md  Spec-Core-Cryptography-And-Mesh.md  Spec-Dual-Sync-And-Local-Storage.md  Spec-Ecosystem-And-Trust-Chain.md  Spec-Enterprise-Secure-Enclave.md  Spec-Identity-And-Governance.md  Spec-Wasm-Tapp-Runtime.md  Tech_Debt.md  TestMatrix.md
docs/raw/MD/: Arrange.md  Design.md  Directory-tree.md  Introduction.md  Note.md  Spec-Core-Cryptography-And-Mesh.md  Spec-Data-Export-And-Sovereignty.md  Spec-Dual-Sync-And-Local-Storage.md  Spec-Enterprise-Secure-Enclave.md  Spec-Identity-And-Governance.md  Spec-Third-Party-Migration-And-Sync.md  Spec-Wasm-Tapp-Runtime.md  Tech_Debt.md  TestMatrix.md
docs/wiki/: 00_Architecture_Overview.md  01_Mesh_and_Crypto.md  02_WorkOS_and_Tapp_Ecosystem.md  03_Local_AI_Integration.md  index.md  invariants.md  log.md  ubiquitous-language.md
docs/wiki/.archive/: large-language-models.md  llm-overview.md  survival-mesh-networking.md  transformer-architecture.md
docs/wiki/concepts/: adr-001-headless-daemon-architecture.md  adr-002-dual-plane-sync.md  adr-003-grpc-over-ffi-ipc.md  adr-004-wasm-dual-engine.md  adr-005-datagrant-quorum-protocol.md  adr-006-ai-gateway-architecture.md  adr-007-shadow-graph-ai-resolution.md  adr-008-delegated-proposer-treekem.md  ai-inference-offloading.md  codebase-directory-guide.md  crdt-dual-sync.md  data-sovereignty-export.md  deep-module-design.md  dual-sync-pattern.md  enterprise-identity-governance.md  enterprise-license-model.md  glassmorphism-design-system.md  hardware-specification.md  hierarchical-authority-messaging.md  ios-mesh-storage-tiers.md  mac-mini-ha-cluster.md  multi-agent-harness.md  open-ai-framework.md  openmls-self-healing.md  phase-framework.md  platform-architecture.md  secure-enclave-ai.md  survival-mesh-networking.md  tapp-community-framework.md  terachat-architecture-overview.md  teralink-fallback-network.md  threat-model.md  transformer-architecture.md  vertical-slice-development.md  wasm-tapp-runtime.md  zero-knowledge-architecture.md
docs/wiki/sources/: tera-arrange.md  tera-client-spec.md  tera-core-spec.md  tera-design.md  tera-eco-spec.md  tera-enclave-spec.md  tera-export-spec.md  tera-gov-spec.md  tera-intro.md  tera-migration-spec.md  tera-note.md  tera-runtime-spec.md  tera-sync-spec.md  tera-tech-debt.md  tera-test-matrix.md
docs/wiki/syntheses/: ai-independent-workstream.md  ci-cd-pipeline-spec.md  deployment-automation-spec.md  gap-resolution-tracker.md  improvement-plan-2026-05-11.md  narrowed-phase-1-mvp.md  platform-limitation-registry.md  platform-rollout-phasing.md  prototype-first-model.md  quantitative-phase-metrics.md  security-review-requirements.md  vision-redefinition-2026-05-11.md  wiki-health-check-2026-05-10.md
phase/: README.md  phase-0-architecture-foundation.md  phase-1-trust-kernel.md  phase-2-dual-sync.md  phase-3-client-bridge.md  phase-4-wasm-ecosystem.md  phase-5-governance-enclave.md  phase-6-chaos-release.md  prototype-phase.md  task-index.md  terachat-ai-agent-phase-plan.md
report/: Báo cáo kĩ thuật .md  TeraChat - Project Memory (Senior Architect Perspective).md  TeraChat_Architecture_Report.txt  TeraChat_Architecture_Update.txt  TeraChat_TechnicalAudit.html  phase-0-hardware-gaps.md
source/apps/Laptop/macOS/: login.pen
source/apps/Phone/Iphone/: design-tokens.json
source/core/: Cargo.toml  buf.yaml  rust-toolchain.toml
source/core/proto/: commands.proto  errors.proto  signals.proto  terachat.proto
source/core/tc-crdt-sync/: Cargo.toml
source/core/tc-crdt-sync/src/: dag.rs  error.rs  lib.rs
source/core/tc-crypto/: Cargo.toml
source/core/tc-crypto/src/: error.rs  ffi.rs  key_management.rs  lib.rs  lints.rs  zeroize_guard.rs
source/core/tc-mesh/: Cargo.toml
source/core/tc-mesh/src/: error.rs  lib.rs  multiplexer.rs  peer.rs
source/core/tc-proto/: Cargo.toml  build.rs
source/core/tc-proto/src/: lib.rs
source/core/tc-store/: Cargo.toml
source/core/tc-store/src/: error.rs  lib.rs
source/core/tc-tapp/: Cargo.toml
source/core/tc-tapp/src/: abi.rs  error.rs  lib.rs
source/server/Mac/: README.md  com.terachat.core.plist  config.toml
