[package]
name = "tc-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TeraChat cryptographic core — PQ-KEM (ML-KEM-768), HKMS, ZeroizeOnDrop enforcement"

[dependencies]
ring = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
