[package]
name = "tc-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TeraChat protobuf definitions — gRPC service contracts, signals, commands, errors"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.12"
