[package]
name = "tc-tapp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TeraChat .tapp runtime — WASM dual-engine sandbox, Host ABI, event bus"

[dependencies]
tc-crypto = { path = "../tc-crypto" }
tc-store = { path = "../tc-store" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
